<resources>
    <string name="app_name">GPE</string>
    <string name="news">News</string>
    <string name="referee">Referee</string>
    <string name="price">Price</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="intrduction">Introduction</string>
    <string name="none">None</string>
    <string name="join">Join</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="organizer">Organizer</string>
    <string name="contact">Contact</string>
    <string name="team">Team</string>
    <string name="athelete">Athelete</string>
    <string name="coach">Coach</string>
    <string name="member">Member</string>
    <string name="name">Name</string>
    <string name="read">Read</string>
    <string name="sent">Sent</string>
    <string name="content">Content</string>
    <string name="again">Again</string>
    <string name="submit">Submit</string>
    <string name="registration">Registration</string>
    <string name="running">Running</string>
    <string name="badminton">Badminton</string>
    <string name="tennis">Tennis</string>
    <string name="soccer">Soccer</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="to">To:</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="cancel">Cancel</string>
    <string name="follow">Follow</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="out">Sign Out</string>
    <string name="find">Find</string>
    <string name="movement">Movement</string>
    <string name="activity">Activity</string>
    <string name="honor">Honor</string>
    <string name="login">Login</string>
    <string name="ability">Ability</string>
    <string name="club">Club</string>
    <string name="school">School</string>
    <string name="venue">Venue</string>
    <string name="agency">Agency</string>
    <string name="user">User</string>
    <string name="sendmsg">Send Message</string>
    <string name="account">Account</string>
    <string name="course">Course</string>
    <string name="forget">Forget Password</string>
    <string name="up">Sign Up</string>
    <string name="interest">Interest</string>
    <string name="load">Loading</string>
    <string name="more">More</string>
    <string name="volley">VolleyBall</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="sports">SPORTS</string>
    <string name="author">Author</string>
    <string name="usage">Usage</string>
    <string name="language">Langugae</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="loadfinish">Loading finish</string>
    <string name="empty">Empty</string>
    <string name="refresh">Refreshfing finish</string>
    <string name="last">Last item</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="scanner">Scanner</string>
    <string name="loading">Loading</string>
    <string name="succed">Succed</string>
    <string name="failed">Failed</string>
</resources>
