<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.Toolbar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/gpe">
            <!--<ImageButton-->
                <!--android:layout_marginLeft="300dp"-->
                <!--android:id="@+id/home_location"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@mipmap/location"-->
                <!--android:layout_marginTop="2dp"-->
                <!--android:background="@color/transparent"/>-->
            <Spinner
                android:id="@+id/home_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="40dp" />
        </android.support.v7.widget.Toolbar>
        <com.youth.banner.Banner
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/banner_news"
            android:layout_width="match_parent"
            android:layout_height="200dp" >
        </com.youth.banner.Banner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/lightgrey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/btn_athlete"
                            android:layout_width="95dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:background="@color/transparent"
                            app:srcCompat="@mipmap/activity" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="@string/activity"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/btn_fields"
                            android:layout_width="95dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:background="@color/transparent"
                            app:srcCompat="@mipmap/venue"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="@string/venue"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                            <ImageButton
                                android:id="@+id/btn_club"
                                android:layout_width="95dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:background="@color/transparent"
                                app:srcCompat="@mipmap/club"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="@string/club"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                            <ImageButton
                                android:id="@+id/btn_school"
                                android:layout_width="95dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:background="@color/transparent"
                                app:srcCompat="@mipmap/school"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="@string/school"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/lightgrey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.2"
                android:text="@string/sports" />
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:scrollbars="none" >
            <LinearLayout
                android:id="@+id/button_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/running"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:background="@color/transparent"
                        app:srcCompat="@mipmap/running"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/running"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/badminton"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:background="@color/transparent"
                        app:srcCompat="@mipmap/badmiton"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/badminton"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/tennis"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:background="@color/transparent"
                        app:srcCompat="@mipmap/baseball"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/volley"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/soccer"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:background="@color/transparent"
                        app:srcCompat="@mipmap/football" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/football"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/basketball"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:background="@color/transparent"
                        app:srcCompat="@mipmap/basketball"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:text="@string/basketball"/>
                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/lightgrey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/news" />
        </LinearLayout>

        <include layout="@layout/progressbar"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_list"
            android:background="@color/white"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/home_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/gpe"
            android:text="@string/more"/>

    </LinearLayout>
</ScrollView>